# hillel-homework

./: .gitignore  README.md
homework/logger/: CMakeLists.txt  README.md  main.cpp
homework/logger/libraries/logger/: log_sinks.cpp  log_sinks.h  logger.cpp  logger.h
homework/number_pipeline/: CMakeLists.txt  README.md  main.cpp
homework/number_pipeline/filters/: filter_factory.cpp  filter_factory.h  number_filters.cpp  number_filters.h
homework/number_pipeline/observers/: number_observer.cpp  number_observer.h
homework/number_pipeline/processor/: number_processor.cpp  number_processor.h
homework/number_pipeline/reader/: number_reader.cpp  number_reader.h
lesson_3/homework/: a.out
lesson_4/: copy_and_swap.cpp
lesson_5/: a.out  main.cpp
lesson_6/: a.out  main.cpp
lesson_8/: notes8.txt
lesson_8/git-test/: README.md  first_test.txt
lessons/lesson_3/: notes3.txt
lessons/lesson_3/homework/: main.cpp
lessons/lesson_4/: main.cpp  notes.txt
lessons/lesson_7/: notes7.txt
lessons/lesson_8/git-test/: fourth_test.txt  second_test.txt
